<resources>
    <string name="app_name">SelfieBooth</string>
    <string name="request_permission">The Application needs camera permissions</string>
    <string name="camera_error">This device doesn\\\'t support Camera2 API</string>
    <string name="capture">Capture</string>
    <string name="description_info">Info</string>
    <string name="phone_number">SMS</string>
    <string name="mail">E-Mail</string>
    <string name="send">Send</string>
    <string name="number">Number</string>
    <string name="go_back">Go Back</string>
</resources>
