<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/shareImage"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_blue_dark"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/shareImage"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:gravity="bottom"
        android:paddingBottom="10dp"
        android:text="@string/phone_number"
        android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView"
        android:textSize="16sp"
        tools:text="Mobile Number" />

    <TextView
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_gravity="start"
        android:layout_marginTop="11dp"
        android:clickable="false"
        android:gravity="bottom"
        android:paddingBottom="10dp"
        android:text="@string/mail"
        android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView"
        android:textSize="16sp"
        android:id="@+id/textView2" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView2"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:textAppearance="@android:style/TextAppearance.Material.Widget.EditText" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/send" />

    <EditText
        android:id="@+id/number"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/mail"
        android:layout_alignTop="@+id/textView"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number"
        android:textAppearance="@android:style/TextAppearance.Material.Widget.EditText" />

</RelativeLayout>