<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/imageFrame"
        android:foreground="@drawable/border1"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="400dp"
        android:layout_height="0dp"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="32dp"
        android:background="#ccffffff"
        android:backgroundTint="@android:color/holo_blue_light"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="2:1.2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/shareImage"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_centerHorizontal="true"
            android:background="@android:color/holo_blue_dark"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/shareImage"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:gravity="bottom"
            android:paddingBottom="10dp"
            android:text="@string/phone_number"
            android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView"
            android:textSize="16sp"
            tools:text="Mobile Number" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_alignStart="@+id/textView"
            android:layout_below="@+id/textView"
            android:layout_gravity="start"
            android:layout_marginTop="11dp"
            android:clickable="false"
            android:gravity="bottom"
            android:paddingBottom="10dp"
            android:text="@string/mail"
            android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/mail"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/textView2"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:textAppearance="@android:style/TextAppearance.Material.Widget.EditText" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:text="@string/send" />

        <EditText
            android:id="@+id/number"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_alignStart="@+id/mail"
            android:layout_alignTop="@+id/textView"
            android:ems="10"
            android:hint="@string/number"
            android:inputType="number"
            android:textAppearance="@android:style/TextAppearance.Material.Widget.EditText" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/mail"
            android:layout_alignTop="@+id/button"
            android:layout_marginEnd="8dp"
            android:background="#FF5252"
            android:text="@string/go_back" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>